; ModuleID = '/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv_ip4_name.c'
source_filename = "/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv_ip4_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { i32 }

@AF_INET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_ip4_name(%struct.sockaddr_in* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.sockaddr_in*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.sockaddr_in* %0, %struct.sockaddr_in** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32, i32* @AF_INET, align 4
  %8 = load %struct.sockaddr_in*, %struct.sockaddr_in** %4, align 8
  %9 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %8, i32 0, i32 0
  %10 = load i8*, i8** %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = call i32 @uv_inet_ntop(i32 %7, i32* %9, i8* %10, i64 %11)
  ret i32 %12
}

declare dso_local i32 @uv_inet_ntop(i32, i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
